<resources>
    <string name="app_name">Aksesin</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maps">Maps</string>
    <string name="history">History</string>
    <string name="info">Info</string>
    <string name="fab_my_location">Floating Action Button My Location</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="destination">Search Your Destination Here</string>
    <string name="distance">0 Km</string>
    <string name="cancel">X</string>
    <string name="time_estimate">0 Min</string>
    <string name="error">Something Wrong!</string>
    <string name="not_found">Location not found!</string>
</resources>